--- a/sass/_greyshade.scss
+++ b/sass/_greyshade.scss
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-	background: #3D4349;
+	background: #ffffff;
 	font-family: "Open Sans", "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,sans-serif;
 	height: 100%;
 }
@@ -173,7 +173,7 @@ body {
 	.left-col {
 		width: 23%;
 		position: fixed;
-		opacity: .3;
+		opacity: .7;
 		-webkit-transition: all .2s ease-in;
 		-moz-transition: all .2s ease-in;
 		-o-transition: all .2s ease-in;
@@ -197,7 +197,7 @@ body {
 				}
 			}
 			a {
-				color: #EFEFEF;
+				color: #8F8F8F;
 				text-shadow: 0 1px #333;
 			}
 			a:hover {
