main bgcolor white

--- a/sass/_greyshade.scss
+++ b/sass/_greyshade.scss
@@ -76,7 +76,7 @@ body {
   	right: 0;
   	min-height: 100%;
 		width: 77%;
-		background: whitesmoke;
+		background: #ffffff;
 		#banner {
 			width: 100%;
 			small {
